--- a/index.html
+++ b/index.html
@@ -4,43 +4,74 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dwaipayan Dutta - Resume</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-YSk6tOjsGJJPByLuMxP+K9y4n+fV9E3aUL1WQDU+3OXRByB4OTfh8PaHEyyDtyrW+qH+ewI1Qj+/CldA1E7xQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0 auto;
       padding: 20px;
       max-width: 900px;
-      background-color: #f9f9f9;
+      background-color: #f4f6f8;
       color: #333;
     }
-    h1, h2 {
+    h1 {
       color: #004080;
+      text-align: center;
+      margin-bottom: 5px;
     }
     .section {
-      margin-bottom: 30px;
+      background: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .section h2 {
+      color: #004080;
+      border-bottom: 2px solid #004080;
+      padding-bottom: 5px;
+      margin-bottom: 15px;
     }
     ul {
       padding-left: 20px;
     }
-    .contact a {
-      color: #004080;
+    .contact, .contact a {
+      color: #333;
       text-decoration: none;
+    }
+    .contact i {
+      color: #004080;
+      margin-right: 8px;
+    }
+    .profile-pic {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 50%;
+      display: block;
+      margin: 10px auto;
+      border: 4px solid #004080;
+    }
+    .section i {
+      margin-right: 8px;
+      color: #004080;
     }
   </style>
 </head>
 <body>
   <h1>Dwaipayan Dutta</h1>
-  <p class="contact">
-    <strong>Senior Data Scientist</strong><br/>
-    📞 +91 9538949218<br/>
-    📧 <a href="mailto:dwaipayandutt@gmail.com">dwaipayandutt@gmail.com</a><br/>
-    🌐 <a href="https://www.linkedin.com/in/dwaipayan-dutta/">LinkedIn</a> |
-    <a href="https://github.com/DwaipayanDutta">GitHub</a><br/>
-    📍 Bangalore, India
+  <img src="unnamed.jpg" alt="Profile Picture" class="profile-pic">
+  <p class="contact" style="text-align:center;">
+    <strong><i class="fas fa-user-tie"></i>Full Stack Data Scientist</strong><br/>
+    <i class="fas fa-phone"></i> +91 9538949218<br/>
+    <i class="fas fa-envelope"></i> <a href="mailto:dwaipayandutt@gmail.com">dwaipayandutt@gmail.com</a><br/>
+    <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/dwaipayan-dutta/">LinkedIn</a> |
+    <i class="fab fa-github"></i> <a href="https://github.com/DwaipayanDutta">GitHub</a><br/>
+    <i class="fas fa-map-marker-alt"></i> Bangalore, India
   </p>
 
   <div class="section">
-    <h2>Summary</h2>
+    <h2><i class="fas fa-user"></i> Summary</h2>
     <p>
       Data Science Leader with over 15 years of experience spanning Retail, BFSI, and Consulting sectors.
       Demonstrated expertise in architecting and deploying advanced AI and machine learning solutions,
@@ -51,7 +82,7 @@
   </div>
 
   <div class="section">
-    <h2>Experience</h2>
+    <h2><i class="fas fa-briefcase"></i> Experience</h2>
 
     <h3>Head of Data Science – Tata AIA Life Insurance (May 2023 – Present)</h3>
     <ul>
@@ -92,7 +123,7 @@
   </div>
 
   <div class="section">
-    <h2>Skills</h2>
+    <h2><i class="fas fa-cogs"></i> Skills</h2>
     <ul>
       <li>Python, R, SQL, SAS</li>
       <li>Azure, AWS, Azure AI, ML Ops</li>
@@ -105,7 +136,7 @@
   </div>
 
   <div class="section">
-    <h2>Key Achievements</h2>
+    <h2><i class="fas fa-trophy"></i> Key Achievements</h2>
     <ul>
       <li>Reduced processing time by 40% using OCR in KYC workflows.</li>
       <li>15% reduction in out-of-stock and $0.8M additional sales.</li>
@@ -115,7 +146,7 @@
   </div>
 
   <div class="section">
-    <h2>Education</h2>
+    <h2><i class="fas fa-graduation-cap"></i> Education</h2>
     <p><strong>Post Graduate Program in Business Analytics</strong><br/>Great Lakes, Chennai – 2016</p>
   </div>
 </body>
