--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   </div>
 
   <div class="footer">
-    &copy; 2025 Dwaipayan Dutta · Inspired by HAU Studio
+    &copy; 2025 Dwaipayan Dutta · 
   </div>
 
   <script>
