--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" class="icon">GitHub
           </a>
         </div>
-        <div>Bangalore, India · +91 9538949218</div>
+        <div>Bangalore, India </div>
       </div>
     </header>
   </div>
