--- a/index_backuo.html
+++ b/index_backuo.html
@@ -1,238 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dwaipayan Dutta - Full Stack Data Scientist</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" />
-  <style>
-    :root {
-      --bg: #fefefe;
-      --text: #0a0a0a;
-      --accent: #ff4d00;
-      --muted: #999;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-      overflow-x: hidden;
-    }
-
-    .section {
-      min-height: 100vh;
-      padding: 80px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      opacity: 0;
-      transform: translateY(60px);
-      transition: all 0.8s ease-out;
-    }
-
-    .section.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .container {
-      max-width: 900px;
-      width: 100%;
-      padding: 0 20px;
-    }
-
-    header {
-      text-align: center;
-    }
-
-    .profile-img {
-      width: 140px;
-      height: 140px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid var(--accent);
-      margin-bottom: 20px;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-
-    .title {
-      font-size: 1.1rem;
-      color: var(--muted);
-    }
-
-    .contact {
-      margin-top: 20px;
-      font-size: 0.9rem;
-      color: var(--text);
-    }
-
-    .contact a {
-      color: var(--accent);
-      text-decoration: none;
-      margin: 0 8px;
-      display: inline-flex;
-      align-items: center;
-    }
-
-    .contact img.icon {
-      width: 20px;
-      height: 20px;
-      margin-right: 6px;
-      vertical-align: middle;
-    }
-
-    h2 {
-      font-size: 1.4rem;
-      margin-bottom: 20px;
-      text-transform: uppercase;
-      border-bottom: 2px solid var(--accent);
-      padding-bottom: 5px;
-    }
-
-    ul {
-      list-style: none;
-    }
-
-    ul li::before {
-      content: "\2022";
-      color: var(--accent);
-      display: inline-block;
-      width: 1em;
-      margin-left: -1em;
-    }
-
-    .job-title {
-      font-weight: bold;
-    }
-
-    .job-meta {
-      font-size: 0.9rem;
-      color: var(--muted);
-      margin-bottom: 10px;
-    }
-
-    .footer {
-      font-size: 0.8rem;
-      text-align: center;
-      margin-top: 40px;
-      color: var(--muted);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Data Science Leader | Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
+            background: #f4f7fa;
+            margin: 0;
+            color: #23272e;
+        }
+        .container {
+            max-width: 780px;
+            margin: 40px auto;
+            background: #fff;
+            box-shadow: 0 4px 32px rgba(60, 60, 80, 0.12);
+            border-radius: 14px;
+            padding: 32px 28px 28px 28px;
+        }
+        .header {
+            text-align: center;
+            border-bottom: 1px solid #e0e6ee;
+            padding-bottom: 20px;
+        }
+        .header h1 {
+            font-size: 2.2rem;
+            color: #162b40;
+            margin-bottom: 6px;
+        }
+        .tagline {
+            font-size: 1.1rem;
+            color: #5286cb;
+            margin-top: 5px;
+        }
+        section {
+            margin-top: 34px;
+        }
+        h2 {
+            color: #2355a0;
+            font-size: 1.3rem;
+            margin-bottom: 12px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        .exp-item, .edu-item {
+            margin-bottom: 17px;
+            padding-bottom: 5px;
+        }
+        .role {
+            font-weight: bold;
+        }
+        .company {
+            color: #5286cb;
+            margin-bottom: 3px;
+        }
+        .degree {
+            font-weight: bold;
+        }
+        .school {
+            color: #5286cb;
+            margin-top: 2px;
+        }
+        .about {
+            color: #333;
+            font-size: 1.06rem;
+            line-height: 1.7;
+        }
+        @media only screen and (max-width: 600px) {
+            .container {
+                padding: 12px 4px 20px 4px;
+                max-width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-  <div class="section" id="hero">
-    <header>
-      <img src="profile.jpg" alt="Dwaipayan Dutta" class="profile-img" />
-      <h1>Dwaipayan Dutta</h1>
-      <div class="title">Full Stack Data Scientist</div>
-      <div class="contact">
-        <div><a href="mailto:dwaipayandutt@gmail.com">dwaipayandutt@gmail.com</a></div>
-        <div>
-          <a href="https://www.linkedin.com/in/dwaipayan-dutta/">
-            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="icon">LinkedIn
-          </a>
-          ·
-          <a href="https://github.com/DwaipayanDutta">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" class="icon">GitHub
-          </a>
+    <div class="container">
+        <div class="header">
+            <h1>Data Science Leader</h1>
+            <div class="tagline">
+                15+ years in Retail, BFSI, Consulting<br>
+                Expert in AI/ML Deployment, Team Leadership & Cross-functional Collaboration
+            </div>
         </div>
-        <div>Bangalore, India </div>
-      </div>
-    </header>
-  </div>
 
-  <div class="section" id="summary">
-    <div class="container">
-      <h2>Summary</h2>
-      <p>
-        Data Science Leader with 15+ years of experience across Retail, BFSI, and Consulting. Expert in AI/ML deployment, leadership, and cross-functional collaboration. Proven success in aligning data solutions with business outcomes.
-      </p>
+        <section>
+            <h2>Professional Experience</h2>
+            <ul>
+                <li class="exp-item">
+                    <span class="role">Head of Data Science</span><br>
+                    <span class="company">Tata AIA Life Insurance</span>
+                </li>
+                <li class="exp-item">
+                    <span class="role">Associate Director</span><br>
+                    <span class="company">Deloitte India Consulting</span>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Education</h2>
+            <ul>
+                <li class="edu-item">
+                    <span class="degree">PGP in Business Analytics</span><br>
+                    <span class="school">Great Lakes Institute of Management &mdash; 2016</span>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>About</h2>
+            <p class="about">
+                Proven success in aligning data solutions with business outcomes. Extensive experience in developing, deploying and managing AI/ML projects from concept to production. Skilled at leading and mentoring diverse teams, and collaborating with senior leadership to drive digital transformation initiatives and deliver measurable business impact.
+            </p>
+        </section>
     </div>
-  </div>
-
-  <div class="section" id="experience">
-    <div class="container">
-      <h2>Experience</h2>
-      <p class="job-title">Head of Data Science – Tata AIA Life Insurance</p>
-      <p class="job-meta">May 2023 – Present</p>
-      <ul>
-        <li>Led GenAI and ML solutions reducing issuance time by 40%.</li>
-        <li>Developed income estimation models improving conversion by 10%.</li>
-        <li>Deployed onboarding and recommender systems for banking channels.</li>
-      </ul>
-      <p class="job-title">Associate Director – Deloitte India Consulting</p>
-      <p class="job-meta">Mar 2020 – May 2023</p>
-      <ul>
-        <li>Forecasted pension liabilities with hierarchical models.</li>
-        <li>Improved logistics with demand forecasting and route optimization.</li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="section" id="skills">
-    <div class="container">
-      <h2>Skills</h2>
-      <ul>
-        <li>Python, R, SQL, SAS, FastAPI, Streamlit</li>
-        <li>Azure AI, AWS, ML Ops, Deployment</li>
-        <li>XGBoost, Random Forest, Deep Learning, LLMs</li>
-        <li>Recommender Systems, Forecasting, NLP</li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="section" id="achievements">
-    <div class="container">
-      <h2>Achievements</h2>
-      <ul>
-        <li>£2.4M recovery via predictive modeling (WNS).</li>
-        <li>$1.9M claim denial reduction (Cognizant).</li>
-        <li>Speaker at CYPHER by Analytics India Magazine.</li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="section" id="education">
-    <div class="container">
-      <h2>Education</h2>
-      <p><strong>PGP in Business Analytics</strong><br/>Great Lakes Institute of Management – 2016</p>
-    </div>
-  </div>
-
-  <div class="footer">
-    &copy; 2025 Dwaipayan Dutta · 
-  </div>
-
-  <script>
-    const sections = document.querySelectorAll('.section');
-    const options = {
-      threshold: 0.2
-    };
-
-    const observer = new IntersectionObserver((entries, observer) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-          observer.unobserve(entry.target);
-        }
-      });
-    }, options);
-
-    sections.forEach(section => {
-      observer.observe(section);
-    });
-  </script>
 </body>
 </html>
