--- a/index.html
+++ b/index.html
@@ -1,122 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Data Science Leader | Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
-            background: #f4f7fa;
-            margin: 0;
-            color: #23272e;
-        }
-        .container {
-            max-width: 780px;
-            margin: 40px auto;
-            background: #fff;
-            box-shadow: 0 4px 32px rgba(60, 60, 80, 0.12);
-            border-radius: 14px;
-            padding: 32px 28px 28px 28px;
-        }
-        .header {
-            text-align: center;
-            border-bottom: 1px solid #e0e6ee;
-            padding-bottom: 20px;
-        }
-        .header h1 {
-            font-size: 2.2rem;
-            color: #162b40;
-            margin-bottom: 6px;
-        }
-        .tagline {
-            font-size: 1.1rem;
-            color: #5286cb;
-            margin-top: 5px;
-        }
-        section {
-            margin-top: 34px;
-        }
-        h2 {
-            color: #2355a0;
-            font-size: 1.3rem;
-            margin-bottom: 12px;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        .exp-item, .edu-item {
-            margin-bottom: 17px;
-            padding-bottom: 5px;
-        }
-        .role {
-            font-weight: bold;
-        }
-        .company {
-            color: #5286cb;
-            margin-bottom: 3px;
-        }
-        .degree {
-            font-weight: bold;
-        }
-        .school {
-            color: #5286cb;
-            margin-top: 2px;
-        }
-        .about {
-            color: #333;
-            font-size: 1.06rem;
-            line-height: 1.7;
-        }
-        @media only screen and (max-width: 600px) {
-            .container {
-                padding: 12px 4px 20px 4px;
-                max-width: 100%;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Data Science Leader Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:600,400&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background: #eef2f8;
+      margin: 0;
+      font-family: 'Montserrat', Arial, sans-serif;
+      color: #20284a;
+    }
+    .main-wrapper {
+      max-width: 950px;
+      margin: 30px auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 8px 36px rgba(60,100,200,0.12);
+      padding: 48px 48px 38px 48px;
+    }
+    .profile-top {
+      display: flex;
+      align-items: center;
+      gap: 28px;
+      border-bottom: 1px solid #e6ebf5;
+      padding-bottom: 20px;
+      margin-bottom: 32px;
+    }
+    .avatar {
+      width: 110px;
+      height: 110px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 2px 10px rgba(55,130,220,0.07);
+      border: 3px solid #608adc;
+      background: #f6f8fa;
+    }
+    .profile-info {
+      flex: 1;
+    }
+    .name {
+      font-size: 2.1rem;
+      font-weight: 700;
+      color: #224093;
+      margin-bottom: 5px;
+    }
+    .role, .location {
+      font-size: 1.1rem;
+      color: #5675ad;
+      margin-bottom: 7px;
+      font-weight: 500;
+    }
+    .about {
+      background: #f4f8fb;
+      border-left: 5px solid #608adc;
+      border-radius: 8px;
+      color: #253762;
+      font-size: 1.05rem;
+      line-height: 1.6;
+      padding: 18px 22px;
+      margin-top: 17px;
+      margin-bottom: 10px;
+    }
+    .section {
+      margin-top: 38px;
+    }
+    h2 {
+      color: #246dd7;
+      font-size: 1.24rem;
+      margin-bottom: 18px;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 1.3px;
+    }
+    .timeline {
+      border-left: 2.5px solid #608adc;
+      padding-left: 20px;
+    }
+    .timeline-item {
+      position: relative;
+      margin-bottom: 24px;
+      padding-bottom: 6px;
+    }
+    .timeline-item::before {
+      content: '';
+      position: absolute;
+      left: -28px;
+      top: 12px;
+      width: 14px;
+      height: 14px;
+      background: #ffffff;
+      border: 3px solid #608adc;
+      border-radius: 50%;
+      z-index: 2;
+    }
+    .item-title {
+      font-weight: 600;
+      color: #264994;
+      font-size: 1.09rem;
+    }
+    .item-sub {
+      color: #3f79c6;
+      font-size: 1rem;
+      font-weight: 500;
+    }
+    .item-years {
+      color: #a3bbe6;
+      font-size: 0.98rem;
+      margin-top: 1px;
+      margin-bottom: 6px;
+      font-style: italic;
+    }
+    .item-desc {
+      font-size: 0.99rem;
+      color: #284067;
+      margin-top: 1px;
+      margin-left: 1px;
+      margin-right: 6px;
+    }
+    .skills {
+      margin-top: 20px;
+      margin-bottom: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+    }
+    .skill {
+      background: #e0ebf7;
+      padding: 7px 15px;
+      border-radius: 20px;
+      color: #3062a9;
+      font-size: 0.97rem;
+      font-weight: 600;
+      margin-bottom: 6px;
+    }
+    @media (max-width: 700px) {
+      .main-wrapper {padding: 12px;}
+      .profile-top {flex-direction: column; align-items: flex-start; gap: 10px;}
+      .name {font-size: 1.32rem;}
+      h2 {font-size: 1.07rem;}
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Data Science Leader</h1>
-            <div class="tagline">
-                15+ years in Retail, BFSI, Consulting<br>
-                Expert in AI/ML Deployment, Team Leadership & Cross-functional Collaboration
-            </div>
+  <div class="main-wrapper">
+    <div class="profile-top">
+      <img src="https://ui-avatars.com/api/?name=Data+Science+Leader&background=608adc&color=fff&size=110" class="avatar" alt="Profile Avatar">
+      <div class="profile-info">
+        <div class="name">Data Science Leader</div>
+        <div class="role">Head of Data Science &amp; AI/ML Expert</div>
+        <div class="location">Based in Mumbai, India</div>
+        <div class="skills">
+          <span class="skill">AI/ML Deployment</span>
+          <span class="skill">Data Analytics</span>
+          <span class="skill">Cloud Architecture</span>
+          <span class="skill">Python</span>
+          <span class="skill">Leadership</span>
+          <span class="skill">Cross-functional Teams</span>
         </div>
-
-        <section>
-            <h2>Professional Experience</h2>
-            <ul>
-                <li class="exp-item">
-                    <span class="role">Head of Data Science</span><br>
-                    <span class="company">Tata AIA Life Insurance</span>
-                </li>
-                <li class="exp-item">
-                    <span class="role">Associate Director</span><br>
-                    <span class="company">Deloitte India Consulting</span>
-                </li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Education</h2>
-            <ul>
-                <li class="edu-item">
-                    <span class="degree">PGP in Business Analytics</span><br>
-                    <span class="school">Great Lakes Institute of Management &mdash; 2016</span>
-                </li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>About</h2>
-            <p class="about">
-                Proven success in aligning data solutions with business outcomes. Extensive experience in developing, deploying and managing AI/ML projects from concept to production. Skilled at leading and mentoring diverse teams, and collaborating with senior leadership to drive digital transformation initiatives and deliver measurable business impact.
-            </p>
-        </section>
+      </div>
     </div>
+    <div class="about">
+      15+ years of distinguished experience driving advanced analytics and AI/ML solutions in Retail, BFSI & Consulting. Proven leader at aligning technology with business outcomes, spearheading enterprise projects and mentoring teams to deliver measurable impact. Expert in cloud-native and data-driven strategy, with a track record of innovation, stakeholder alignment, and organizational growth.
+    </div>
+
+    <div class="section">
+      <h2>Professional Experience</h2>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="item-title">Head of Data Science</div>
+          <div class="item-sub">Tata AIA Life Insurance</div>
+          <div class="item-years">2021 &ndash; Present</div>
+          <div class="item-desc">
+            Leading AI/ML innovation and data strategy for insurance solutions, driving operational excellence and business transformation.
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="item-title">Associate Director</div>
+          <div class="item-sub">Deloitte India Consulting</div>
+          <div class="item-years">2016 &ndash; 2021</div>
+          <div class="item-desc">
+            Directed data analytics projects and consulting teams for Fortune 500 clients, maximizing business value through advanced analytics.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Education</h2>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="item-title">PGP in Business Analytics</div>
+          <div class="item-sub">Great Lakes Institute of Management</div>
+          <div class="item-years">2016</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
